Final Cleanup (#971)